--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "js",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "dev": "webpack-dev-server --hot",
+    "webpack": "webpack -w"
+  },
   "dependencies": {
-    "gpu.js": "^2.11.4"
+    "gpu.js": "^2.11.4",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
