--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "webpack": "webpack -w"
   },
   "dependencies": {
+    "dat.gui": "^0.7.7",
     "gpu.js": "^2.11.4",
     "jquery": "^3.6.0",
     "webpack": "^4.26.1",
