--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dat.gui": "^0.7.7",
     "gpu.js": "^2.11.4",
     "jquery": "^3.6.0",
+    "seedrandom": "^3.0.5",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
