--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gpu.js": "^2.11.4",
     "jquery": "^3.6.0",
     "seedrandom": "^3.0.5",
+    "simplex-noise": "^3.0.0",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
